# github-actions

./: .gitignore  1.generate.solution.cmd  1.resolve.dependencies.cmd  2.generate.solution.cmd  3.build.all.cmd  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
.github/actions/build_assets/: action.yml
.github/actions/save_build_info/: action.yml
.github/actions/vcpkg-cache/: action.yml
.github/workflows/: build.yml  shared_workflow.yml
src/: 0.clean.all.cmd  1.generate.solution.cmd  CMakeLists.txt
src/src/tests/: CMakeLists.txt
src/tests/: CMakeLists.txt  main.cpp
